--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "description": "Rizo Browser",
   "author": "Rizo Team",
   "dependencies": {
+    "@cliqz/adblocker-electron": "^1.34.0",
     "@types/uuid": "^10.0.0",
     "clsx": "^2.1.1",
+    "cross-fetch": "^4.1.0",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^11.0.2",
     "framer-motion": "^12.26.2",
