--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@cliqz/adblocker-electron": "^1.34.0",
     "@types/uuid": "^10.0.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "cross-fetch": "^4.1.0",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^11.0.2",
