--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rizo",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "concurrently \"tsc -p electron/tsconfig.json -w\" \"vite\" \"wait-on tcp:5173 && cross-env VITE_DEV_SERVER_URL=http://localhost:5173 electron .\"",
@@ -15,6 +15,9 @@
   "author": "Rizo Team",
   "dependencies": {
     "@cliqz/adblocker-electron": "^1.34.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@types/uuid": "^10.0.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
