--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
       {
         "provider": "github",
         "owner": "RafRafHero",
-        "repo": "https://github.com/RafRafHero/Rize"
+        "repo": "Rize"
       }
     ],
     "productName": "Rizo",
