--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rizo",
   "private": true,
-  "version": "1.1.0",
+  "version": "1.3.0",
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "concurrently \"tsc -p electron/tsconfig.json -w\" \"vite\" \"wait-on tcp:5173 && cross-env VITE_DEV_SERVER_URL=http://localhost:5173 electron .\"",
@@ -94,6 +94,7 @@
     },
     "nsis": {
       "oneClick": false,
+      "perMachine": true,
       "allowToChangeInstallationDirectory": true,
       "createDesktopShortcut": "always",
       "runAfterFinish": true,
