--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rizo",
   "private": true,
-  "version": "1.3.1",
+  "version": "1.4.0",
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "concurrently \"tsc -p electron/tsconfig.json -w\" \"vite\" \"wait-on tcp:5173 && cross-env VITE_DEV_SERVER_URL=http://localhost:5173 electron .\"",
@@ -70,7 +70,8 @@
       {
         "provider": "github",
         "owner": "RafRafHero",
-        "repo": "Rize"
+        "repo": "Rize",
+        "releaseType": "release"
       }
     ],
     "productName": "Rizo",
