--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
   "name": "rizo",
   "private": true,
-  "version": "1.4.2",
+  "version": "1.1.0",
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "concurrently \"tsc -p electron/tsconfig.json -w\" \"vite\" \"wait-on tcp:5173 && cross-env VITE_DEV_SERVER_URL=http://localhost:5173 electron .\"",
     "build": "tsc -p electron/tsconfig.json && vite build && electron-builder",
     "build:win": "tsc -p electron/tsconfig.json && vite build && electron-builder --windows nsis",
-    "preview": "vite preview",
-    "publish-always": "electron-builder --win --publish always"
+    "publish-always": "electron-builder --win --publish always",
+    "preview": "vite preview"
   },
   "description": "Rizo Browser",
-  "repository": "https://github.com/RafRafHero/Rize",
   "author": "Rizo Team",
   "dependencies": {
     "@cliqz/adblocker-electron": "^1.34.0",
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
     "@types/uuid": "^10.0.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cross-fetch": "^4.1.0",
-    "electron-log": "^5.4.3",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^11.0.2",
     "electron-updater": "^6.7.3",
@@ -60,12 +55,12 @@
   },
   "build": {
     "appId": "com.rizobrowser.app",
-    "files": [
-      "dist/**/*",
-      "dist-electron/**/*",
-      "public/**/*",
-      "package.json"
-    ],
+    "productName": "Rizo",
+    "artifactName": "Rizo Setup ${version}.${ext}",
+    "directories": {
+      "output": "dist",
+      "buildResources": "build"
+    },
     "publish": [
       {
         "provider": "github",
@@ -74,12 +69,10 @@
         "releaseType": "release"
       }
     ],
-    "productName": "Rizo",
-    "artifactName": "Rizo Setup ${version}.${ext}",
-    "directories": {
-      "output": "dist",
-      "buildResources": "build"
-    },
+    "files": [
+      "dist/**/*",
+      "dist-electron/**/*"
+    ],
     "win": {
       "target": "nsis",
       "icon": "build/icon.ico",
@@ -96,7 +89,6 @@
     },
     "nsis": {
       "oneClick": false,
-      "perMachine": true,
       "allowToChangeInstallationDirectory": true,
       "createDesktopShortcut": "always",
       "runAfterFinish": true,
