--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "rizo",
   "private": true,
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "concurrently \"tsc -p electron/tsconfig.json -w\" \"vite\" \"wait-on tcp:5173 && cross-env VITE_DEV_SERVER_URL=http://localhost:5173 electron .\"",
     "build": "tsc -p electron/tsconfig.json && vite build && electron-builder",
     "build:win": "tsc -p electron/tsconfig.json && vite build && electron-builder --windows nsis",
     "publish-always": "electron-builder --win --publish always",
+    "release": "tsc -p electron/tsconfig.json && vite build && electron-builder --win --publish always",
     "preview": "vite preview"
   },
   "description": "Rizo Browser",
   "author": "Rizo Team",
   "dependencies": {
     "@cliqz/adblocker-electron": "^1.34.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@types/uuid": "^10.0.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -65,13 +69,18 @@
       {
         "provider": "github",
         "owner": "RafRafHero",
-        "repo": "Rize",
+        "repo": "Rizo-Releases",
         "releaseType": "release"
       }
     ],
     "files": [
       "dist/**/*",
-      "dist-electron/**/*"
+      "dist-electron/**/*",
+      "public/**/*",
+      "package.json"
+    ],
+    "asarUnpack": [
+      "**/*.node"
     ],
     "win": {
       "target": "nsis",
