--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "rizo",
   "private": true,
-  "version": "1.2.0",
+  "version": "1.2.2",
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "concurrently \"tsc -p electron/tsconfig.json -w\" \"vite\" \"wait-on tcp:5173 && cross-env VITE_DEV_SERVER_URL=http://localhost:5173 electron .\"",
     "build": "tsc -p electron/tsconfig.json && vite build && electron-builder",
     "build:win": "tsc -p electron/tsconfig.json && vite build && electron-builder --windows nsis",
+    "build:mac": "tsc -p electron/tsconfig.json && vite build && electron-builder --mac dmg",
+    "build:all": "tsc -p electron/tsconfig.json && vite build && electron-builder --win --mac",
     "publish-always": "electron-builder --win --publish always",
     "release": "tsc -p electron/tsconfig.json && vite build && electron-builder --win --publish always",
     "preview": "vite preview"
@@ -65,6 +67,14 @@
       "output": "dist",
       "buildResources": "build"
     },
+    "protocols": {
+      "name": "Rizo-Protocol",
+      "schemes": [
+        "rizo",
+        "http",
+        "https"
+      ]
+    },
     "publish": [
       {
         "provider": "github",
@@ -93,6 +103,26 @@
             "https",
             "rizo"
           ]
+        }
+      ]
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "build/icon.png",
+      "category": "public.app-category.productivity"
+    },
+    "dmg": {
+      "contents": [
+        {
+          "x": 410,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        },
+        {
+          "x": 130,
+          "y": 150,
+          "type": "file"
         }
       ]
     },
